mra/plots/TemperatureVsDepthPlot: Fix Java9+ deprecation for new Double.